--- a/index.html
+++ b/index.html
@@ -6,227 +6,104 @@
 <title>Device Manager</title>
 
 <style>
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+*{box-sizing:border-box;font-family:Arial}
+body{
+  margin:0;min-height:100vh;
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+  display:flex;justify-content:center;align-items:center;padding:15px
 }
-
-body {
-  margin: 0;
-  min-height: 100vh;
-  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
+.container{max-width:460px;width:100%}
+.card{
+  background:#fff;padding:22px;border-radius:16px;
+  box-shadow:0 15px 40px rgba(0,0,0,.25);margin-bottom:20px
 }
-
-.container {
-  width: 100%;
-  max-width: 460px;
+h2{text-align:center;color:#203a43}
+input,select,button{
+  width:100%;padding:12px;margin-bottom:12px;
+  border-radius:8px;border:1px solid #ccc
 }
-
-.card {
-  background: #fff;
-  padding: 22px;
-  border-radius: 16px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.25);
-  margin-bottom: 20px;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 15px;
-  color: #203a43;
-}
-
-label {
-  font-size: 14px;
-  margin-bottom: 5px;
-  display: block;
-}
-
-input, select, button {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 12px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-}
-
-.harga {
-  background: #f1f5f9;
-  padding: 10px;
-  border-radius: 8px;
-  text-align: center;
-  font-weight: bold;
-}
-
-button {
-  background: #2c5364;
-  color: white;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #203a43;
-}
-
-#copyBtn {
-  background: #16a34a;
-  display: none;
-}
-
-#copyBtn:hover {
-  background: #15803d;
-}
-
-.result {
-  display: none;
-  white-space: pre-line;
-  background: #eef2f7;
-  padding: 12px;
-  border-radius: 8px;
-  margin-top: 10px;
-  font-size: 14px;
-}
-
-.loading {
-  display: none;
-  text-align: center;
-  margin-top: 8px;
-}
+.harga{background:#f1f5f9;padding:10px;border-radius:8px;text-align:center;font-weight:bold}
+button{background:#2c5364;color:#fff;border:none;font-weight:bold;cursor:pointer}
+button:hover{background:#203a43}
+.result{white-space:pre-line;display:none;background:#eef2f7;padding:12px;border-radius:8px}
+.loading{text-align:center;display:none}
+#copyBtn{display:none;background:#16a34a}
 </style>
 </head>
-<body>
 
+<body>
 <div class="container">
 
-  <!-- ================= REGISTER ================= -->
-  <div class="card">
-    <h2>Register Device</h2>
+<div class="card">
+<h2>Register Device</h2>
+<input id="reg_iddevice" placeholder="ID Device">
+<select id="reg_durasi">
+  <option value="">Pilih Durasi</option>
+  <option value="3">3 Hari</option>
+  <option value="7">7 Hari</option>
+  <option value="15">15 Hari</option>
+</select>
+<div class="harga" id="reg_harga">Harga: -</div>
+<button onclick="submitData('register')">REGISTER</button>
+</div>
 
-    <label>ID Device</label>
-    <input type="text" id="reg_iddevice" placeholder="ID Device baru">
+<div class="card">
+<h2>Perpanjang Durasi</h2>
+<input id="ext_iddevice" placeholder="ID Device">
+<select id="ext_durasi">
+  <option value="">Pilih Durasi</option>
+  <option value="3">+3 Hari</option>
+  <option value="7">+7 Hari</option>
+  <option value="15">+15 Hari</option>
+</select>
+<div class="harga" id="ext_harga">Harga: -</div>
+<button onclick="submitData('extend')">PERPANJANG</button>
+</div>
 
-    <label>Durasi</label>
-    <select id="reg_durasi">
-      <option value="">-- Pilih Durasi --</option>
-      <option value="3">3 Hari</option>
-      <option value="7">7 Hari</option>
-      <option value="15">15 Hari</option>
-    </select>
-
-    <div class="harga" id="reg_harga">Harga: -</div>
-
-    <button onclick="submitData('register')">REGISTER</button>
-  </div>
-
-  <!-- ================= PERPANJANG ================= -->
-  <div class="card">
-    <h2>Perpanjang Durasi</h2>
-
-    <label>ID Device</label>
-    <input type="text" id="ext_iddevice" placeholder="ID Device terdaftar">
-
-    <label>Tambah Durasi</label>
-    <select id="ext_durasi">
-      <option value="">-- Pilih Durasi --</option>
-      <option value="3">+3 Hari</option>
-      <option value="7">+7 Hari</option>
-      <option value="15">+15 Hari</option>
-    </select>
-
-    <div class="harga" id="ext_harga">Harga: -</div>
-
-    <button onclick="submitData('extend')">PERPANJANG</button>
-  </div>
-
-  <!-- ================= RESULT ================= -->
-  <div class="card">
-    <div class="loading" id="loading">⏳ Memproses...</div>
-    <div class="result" id="result"></div>
-    <button id="copyBtn" onclick="copyText()">📋 Salin Transaksi</button>
-  </div>
+<div class="card">
+<div id="loading" class="loading">⏳ Memproses...</div>
+<div id="result" class="result"></div>
+<button id="copyBtn" onclick="copyText()">📋 Salin</button>
+</div>
 
 </div>
 
 <script>
-const URL_API = "https://script.google.com/macros/s/AKfycbwIiLynEPaWWV0YClkOZRHyB2TvwKjK405Fa3rGYw0uj5jNOmNwSiE0Joay5KmXUjoV9Q/exec";
-
+const URL_API = "PASTE_URL_APPS_SCRIPT_MU_DISINI";
 const hargaMap = {3:3000,7:5000,15:10000};
 
-function updateHarga(selectId, hargaId) {
-  const d = document.getElementById(selectId).value;
-  document.getElementById(hargaId).textContent =
-    d ? "Harga: Rp " + hargaMap[d].toLocaleString("id-ID") : "Harga: -";
-}
+reg_durasi.onchange=()=>reg_harga.textContent=reg_durasi.value?"Harga: Rp "+hargaMap[reg_durasi.value]:"Harga: -";
+ext_durasi.onchange=()=>ext_harga.textContent=ext_durasi.value?"Harga: Rp "+hargaMap[ext_durasi.value]:"Harga: -";
 
-reg_durasi.onchange = () => updateHarga("reg_durasi","reg_harga");
-ext_durasi.onchange = () => updateHarga("ext_durasi","ext_harga");
+function submitData(type){
+  let id = type==="register"?reg_iddevice.value.trim():ext_iddevice.value.trim();
+  let dur = type==="register"?reg_durasi.value:ext_durasi.value;
 
-function submitData(type) {
-  let iddevice, durasi;
+  if(!id||!dur){alert("Lengkapi data");return}
 
-  if (type === "register") {
-    iddevice = reg_iddevice.value.trim();
-    durasi = reg_durasi.value;
-  } else {
-    iddevice = ext_iddevice.value.trim();
-    durasi = ext_durasi.value;
-  }
+  loading.style.display="block";
+  result.style.display="none";
+  copyBtn.style.display="none";
 
-  if (!iddevice || !durasi) {
-    alert("ID Device dan Durasi wajib diisi");
-    return;
-  }
+  const d = new URLSearchParams();
+  d.append("action",type);
+  d.append("iddevice",id);
+  d.append("durasi",dur);
 
-  loading.style.display = "block";
-  result.style.display = "none";
-  copyBtn.style.display = "none";
-
-  const data = new URLSearchParams();
-  data.append("iddevice", iddevice);
-  data.append("durasi", durasi);
-
-  fetch(URL_API, { method: "POST", body: data })
-    .then(r => r.text())
-    .then(text => {
-      loading.style.display = "none";
-      result.style.display = "block";
-      result.textContent = text;
-
-      if (text.includes("BERHASIL")) {
-        copyBtn.style.display = "block";
-      }
-    })
-    .catch(err => {
-      loading.style.display = "none";
-      result.style.display = "block";
-      result.textContent = "ERROR: " + err;
+  fetch(URL_API,{method:"POST",body:d})
+    .then(r=>r.text())
+    .then(t=>{
+      loading.style.display="none";
+      result.style.display="block";
+      result.textContent=t;
+      if(t.includes("BERHASIL"))copyBtn.style.display="block";
     });
 }
 
-function copyText() {
-  navigator.clipboard.writeText(result.innerText)
-    .then(() => {
-      alert("Transaksi disalin 📋");
-
-      reg_iddevice.value = "";
-      reg_durasi.value = "";
-      reg_harga.textContent = "Harga: -";
-
-      ext_iddevice.value = "";
-      ext_durasi.value = "";
-      ext_harga.textContent = "Harga: -";
-
-      result.style.display = "none";
-      copyBtn.style.display = "none";
-    });
+function copyText(){
+  navigator.clipboard.writeText(result.innerText);
+  alert("Disalin");
 }
 </script>
-
 </body>
 </html>
